viewPort fixed to avoid undesired behaior on mobile devices

--- a/assets/stylus/styles.styl
+++ b/assets/stylus/styles.styl
@@ -1,5 +1,4 @@
-
-@media (min-width:767px)
+@media screen and (min-width:767px)
 	.slidr-home-demo
 		div {
 			line-height: 40px
@@ -15,8 +14,7 @@
 		width: 755px
 		height: 250px
 		margin: 0 auto
-		
-@media (min-width:1024px)
+@media screen and (min-width:1023px)
 	.slidr-home-demo
 		div {
 			line-height: 70px
@@ -28,26 +26,30 @@
 			letter-spacing: 0px
 			color: white
 		}
-		width: 1010px
+		width: 1020px
 		height: 400px
 		margin: 0 auto
+		margin-top: 20px
 
-@media (min-width:1279px)
+@media screen and (min-width:1278px)
 	.slidr-home-demo
 		div {
-			line-height: 70px
+			line-height: 50px
 			width: 100%
 			height: 100%
 			text-align: center
-			font-size: 70px
-			font-weight: 600
+			font-size: 50px
+			font-weight: 500
 			letter-spacing: 0px
 			color: white
 		}
-		width: 1270px
-		height: 450px
+		width: 1265px
+		height: 300px
 		margin: 0 auto
-@media (min-width:1800px)
+		margin-top: 20px
+
+
+@media screen and (min-width:1800px)
 	.slidr-home-demo
 		div {
 			line-height: 70px
@@ -63,6 +65,8 @@
 		height: 450px
 		margin: 0 auto
 		margin-top: 40px
+		
+
 
 .demo-slides 
 	div{
@@ -98,7 +102,7 @@
 html 
 	font-family: 'Quicksand', sans-serif
 	color: #3d464d
-	background-color: #fff
+	background-color: #F6F6F6
 	-webkit-font-smoothing: antialiased
 	width: 100%
 	text-align: center
